commit po testach